# niv-shell

./: README.md  default.nix  niv-shell.cabal  shell.nix
nix/: sources.json
