cabal-version:      2.4
name:               niv-shell
version:            0.1.0.0
synopsis:           Example project
license:            MIT
license-file:       LICENSE
author:             Vincent Orr
maintainer:         info@cmdv.me
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   src
  build-depends:    base
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates

executable niv-shell-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates

test-suite niv-shell
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
    , base
    , niv-shell
    , hspec

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover -any
  ghc-options:        -Wall -Wincomplete-record-updates
